--- a/css/style.css
+++ b/css/style.css
@@ -98,6 +98,11 @@ html {
   font-family: "Sicret Mono Personal";
 }
 
+.header__logo img:hover{
+    transform: rotate(360deg);
+    transition-duration: 1s;
+}
+
 .header {
   position: fixed;
   width: 100%;
@@ -114,7 +119,7 @@ html {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(184, 200, 182, 0.81);
+  background-color: #0c2237;
   opacity: 0.8;
   z-index: 2;
 }
@@ -212,8 +217,8 @@ html {
     height: 100%;
     overflow: auto;
     transition: all 0.2s ease 0s;
-    background-color: grey;
-    padding: 70px 10px 20px 10px;
+    background-color: #0c2237;
+    padding: 80px 20px 20px 40px;
   }
   .header__menu.active {
     top: 0;
@@ -239,10 +244,30 @@ html {
     text-shadow: 2px 2px 3px black;
     opacity: 1;
 }
-@media (max-width: 840px) {
+@media (max-width: 900px) {
     .title{
         margin: 10px 0 20px 0;
+        font-size: 40px;
     }
+}
+@media (max-width: 420px) {
+    .title{
+        margin: 10px 0 20px 0;
+        font-size: 30px;
+    }
+}
+@media (max-width: 320px) {
+    .title{
+        margin: 10px 0 20px 0;
+        font-size: 20px;
+    }
+}
+
+.text{
+    font-family: sans-serif;
+    line-height: 20px;
+    font-size: 18px;
+    padding: 40px;
 }
 
 .wrapper {
@@ -264,8 +289,8 @@ html {
     padding: 20px 0;
 }
 @media (max-width: 840px) {
-    .fullscreen1{
-        min-height: 30vh;
+    .fullscreen{
+        min-height: 70vh;
     }
     .title{
         margin: 0;
@@ -331,7 +356,7 @@ a.button {
     letter-spacing: 4px;
     color: #fff;
     text-transform: uppercase;
-    background-color: rgba(0,0,0, 0.3);
+    background-color: #0c2237;
 }
 a.button:hover{
     background-color: rgba(0,0,0, 0.0);
@@ -373,19 +398,33 @@ a:hover span {
 
 /*========== Activities ============*/
 
-.fullscreen2 {
-    background-color:  rgba(0, 0, 0, 0.55);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-attachment: fixed;
-    -webkit-background-size: cover;
-    background-size: cover;
+.screen2{
+    background-color: #f0f4f7;
 }
-@media (max-width: 840px) {
-    .fullscreen2{
-        background-image: url(../img/2054.jpg);
+@media (max-width: 900px) {
+    .screen2{
+        background-color: #0c2237;
+        min-height: 100vh;
+    }
+    a.reuss{
+        color: red;
     }
 }
+
+@media (max-width: 640px) {
+    .screen2{
+        background-color: #0c2237;
+        min-height: 90vh;
+    }
+}
+
+@media (max-width: 420px) {
+    .screen2{
+        background-color: #0c2237;
+        min-height: 60vh;
+    }
+}
+
 .box1 {
     display: flex;
 }
@@ -413,75 +452,38 @@ a:hover span {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    line-height: 18px;
-    font-size: 20px;
 }
-.box1__text_title {
-    color: white;
-    padding: 20px;
+
+
+@media (max-width: 840px) {
+    .box1__intro-text{
+        color: #fff;
+    }
 }
+
 .box1__button{
     text-align: center;
 }
 
 /*============= PLACES ====================*/
 
-.fullscreen3 {
-    position: relative;
-    background-image: url(../img/bcg_routes.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-attachment: fixed;
-    -webkit-background-size: cover;
-    background-size: cover;
+.screen3 {
+    background-color: #f0f4f7;
 }
 
 .box2__text {
-    max-width: 1180px;
-    flex: 1 1 auto;
-    min-height: 70vh;
-    margin: 0 auto;
-    padding: 15px;
-    /*text-align: center;*/
     display: flex;
     flex-direction: column;
-    /*justify-content: center;*/
-    color: #fff;
-    background-color: rgba(0, 0, 0, 0.7);
-    line-height: 18px;
-    font-size: 20px;
+    justify-content: space-between;
 }
 
 /*============= NATURE ===================*/
 
-.fullscreen4 {
-    background-color:  rgba(0, 0, 0, 0.55);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-attachment: fixed;
-    -webkit-background-size: cover;
-    background-size: cover;
+.screen4 {
+    background-color: #f0f4f7;
 }
-@media (max-width: 840px) {
-    .fullscreen4{
-        background-image: url(../img/Action_2016_MTB_1.webp);
-        background-repeat: no-repeat;
-        background-position: 0 0;
-        background-attachment: fixed;
-        -webkit-background-size: cover;
-        background-size: cover;
-    }
-}
-.box3 {}
-.box3__title {}
-.box3__text {
-    display: inline-flex;
-    align-items: center;
 
-    line-height: 18px;
-    font-size: 20px;
-}
-@media (max-width: 840px) {
+@media (max-width: 900px) {
     .box__text{
         display: flex;
         justify-content: column;
@@ -492,29 +494,12 @@ a:hover span {
 
 .fullscreen5 {
     min-height: 100vh;
-    background-image: url(../img/2054.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-attachment: fixed;
-    -webkit-background-size: cover;
-    background-size: cover;
+    background-color: #f0f4f7;
 }
-.box4 {}
-.box4__text{
-    display: inline-flex;
-    align-items: center;
-}
+
 .box4__slider{
     min-width: 0;
 }
-
-/*=============================*/
-
-.slick-slider{}
-
-.slick-slider.slick-initialized{}
-
-.slick-slider.slick-dotted{}
 
 .slick-list {
     overflow: hidden;
@@ -524,31 +509,6 @@ a:hover span {
     display: flex;
     align-items: flex-start;
 }
-.slick-slide{}
-.slick-slide.slick-active{}
-
-.slick-slide.slick-current{}
-
-.slick-slide.slick-center{}
-
-.slick-slide.slick-cloned{}
-
-.slick-arrow{}
-
-.slick-arrow.slick-prev{}
-
-.slick-arrow.slick-next{}
-
-.slick-arrow.slick-disabled{}
-
-.slick-dots{}
-.slick-dots li{}
-
-.slick-dots li.slick-active{}
-
-.slick-dots li button{}
-
-/*=============================*/
 
 .slider{
     min-width: 0;
@@ -578,11 +538,11 @@ a:hover span {
 }
 .slider .slick-arrow.slick-prev{
     left: 0;
-    background: url(../img/sl-arrow_l.svg) 0 0 / 100% no-repeat;
+    background: url(../img/icons/left-chevron.svg) 0 0 / 100% no-repeat;
 }
 .slider .slick-arrow.slick-next{
     right: 0;
-    background: url(../img/sl-arrow_r1.svg) 0 0 / 100% no-repeat;
+    background: url(../img/icons/right-chevron.svg) 0 0 / 100% no-repeat;
 }
 @media (max-width: 840px) {
     .slider .slick-arrow.slick-prev,
@@ -602,19 +562,16 @@ a:hover span {
 
 .slider .slick-dots li.slick-active button{
     background-color: transparent;
-    border: 2px solid #fff;
-    box-shadow: 2px 2px 0px black;
+    border: 2px solid #0c2237;
 }
 
 .slick-dots li button{
     font-size: 0;
     width: 15px;
     height: 15px;
-    background-color: #fff;
+    background-color: #0c2237;
     border-radius: 50%;
-    box-shadow: 1px 1px 2px black;
 }
-.slider__item{}
 .slider .slider__item{
     margin: 15px;
 }
@@ -628,6 +585,7 @@ a:hover span {
 .slider__box img{
     max-width: 100%;
     margin-bottom: 5px;
+    border: 2px solid #f0f4f7;
 }
 @media (max-width: 840px) {
     .slider__box{
@@ -641,16 +599,12 @@ a:hover span {
 .title__slider{
     padding: 5px;
     fill: cover;
-    font-family: Sicret Mono Personal;
-    font-size: 30px;
-    color: #fff;
-    letter-spacing: 2px;
-    text-shadow: 1px 1px 2px black;
-    background-color: rgba(0,0,0, 0.5);
-
+    font-family: sans-serif;
+    font-size: 20px;
+    color: #0c2237;
+    letter-spacing: 1px;
 }
-.box5__title {}
-.box5__text {}
+
 .fullscreen_bg {
     background-image: url(../img/2054.jpg);
     background-repeat: no-repeat;
@@ -661,7 +615,11 @@ a:hover span {
 }
 
 /*===============CONTACTS=====================*/
-
+.fullscreen6{
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
 .fullscreen6 {
     background-image: url(../img/2054.jpg);
     background-repeat: no-repeat;
@@ -671,13 +629,13 @@ a:hover span {
     background-size: cover;
 }
 
-.conteiner {}
-.box5 {}
-.box5__title {}
-.box5__box{
+.box5 {
+    margin-bottom: 20px;
     display: flex;
-    justify-content: space-around;
+    flex-direction: column;
+    flex: 1 1 auto;
 }
+
 @media (max-width: 840px) {
     .box5__box{
         display: flex;
@@ -686,31 +644,15 @@ a:hover span {
         justify-content: flex-start;
     }
 }
-.box5__text{
-    font-family: Helvetica;
-    letter-spacing: 5px;
-    text-transform: uppercase;
-    font-size: 20px;
-    color: white;
-    padding: 10px;
-}
+
 .box5__content {
+    display: flex;
     background-color: rgba(184, 200, 182, 0.81);
     border-radius: 2px;
     padding: 5px;
+    flex: 1 1 auto;
 }
-.form1{
-    display: flex;
-    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-    color: rgba(46, 58, 44, 1);
-    font-weight: 600;
-}
-@media (max-width: 840px) {
-    .form1{
-        display: inline-block;
-        flex-direction: column;
-    }
-}
+
 .input_form{
     margin: 20px;
 }
@@ -726,7 +668,7 @@ a:hover span {
     display: flex;
     justify-content: center;
 }
-.box5__social {}
+
 @media (max-width: 840px) {
     .box5__social{
         margin: 60px 0 0 0;
@@ -739,10 +681,174 @@ a:hover span {
 }
 .box5__smm{
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
     padding: 5px;
 }
 .box5__smm img{
-    align-self: center;
+    margin: 0 30px 0 0;
+}
+
+/* ========================================================== */
+  
+  h1{
+    font-family: Monoton;
+    color: red;
+    font-size: 20px;
+    text-transform: uppercase;
+  }
+  
+  .box__input{
+    background-color: #f0f4f7;
+    padding: 15px;
+    max-width: 320px;
+    height: 50vh;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    font-family: sans-serif;
+    margin: 0 auto;
+    align-items: center;
+  }
+
+  .box__input h1{
+      text-align: center;
+      font-family: sans-serif;
+      letter-spacing: 2px;
+  }
+  
+  .form{
+    font-size: 14px;
+    width: 300px;
+    position: relative;
+    height: 50px;
+    overflow: hidden;
+    line-height: 11px;
+  }
+  
+  .form input{
+    background-color: #f0f4f7;
+    width: 100%;
+    height: 100%;
+    color: #1695c0;
+    padding-top: 20px;
+    border: none;
+    outline: none;
+  }
+  
+  .form label {
+    position: absolute;
+    bottom: 0;
+    left: 0%;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    border-bottom: 2px solid grey;
+  }
+  
+  .form label::after{
+    content: '';
+    position: absolute;
+    left: 0px;
+    bottom: -2px;
+    height: 100%;
+    width: 100%;
+    border-bottom: 3px solid #1695c0;
+    transform: translateX(-100%);
+    transition: transform 0.3s ease;
+  }
+  
+  .content-name{
+    position: absolute;
+    color: grey;
+    bottom: 5px;
+    left: 0px;
+    transition: all 0.3s ease;
+  }
+  
+  .form input:focus + .label-name .content-name, 
+  .form input:valid + .label-name .content-name{
+    transform: translateY(-150%);
+    font-size: 14px;
+    color: #1695c0;
+  }
+  
+  .form input:focus + .label-name::after, 
+  .form input:valid + .label-name::after{
+    transform: translateX(0%);
+  }
+
+
+  /* ============================================================================================================= */
+
+
+  .footer{
+    min-height: 40vh;
+    background-color: #0c2237;
+	font-family: sans-serif;
+	color: #fff;
+	list-style: none;
+	text-decoration: none;
+	letter-spacing: 1px;
+    z-index: 10;
+}
+@media (max-width: 900px) {
+    .footer{
+        height: 100%;
+        margin: 0 auto;
+        width: 100%;
+        font-size: 20px;
+    }
+}
+.footer__box {
+    background-color: #0c2237;
+    padding-top: 20px;  
+}
+
+@media (max-width: 900px) {
+    .footer__box{
+        padding: 20px;
+        display: flex;
+        width:100%;
+        flex-direction: column;
+        align-items: center;
+        margin: 0 auto;
+    }
+}
+
+
+.intro__footer{
+	display: flex;
+    justify-content: space-between;    
+	text-decoration: none;
+	color: #dae8de;
+    line-height: 2;
+}
+
+@media (max-width: 900px) {
+    .intro__footer{
+        display: flex;
+        flex-direction: column;
+    }
+}
+
+.footer__block {
+    margin: 0 60px 0 0;
+    align-items: center;
+}
+.social__media {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+.social__media a{
+	margin: 0 40px 0;
+}
+
+.footer a{
+	color: #dae8de;
+}
+
+.tel a{
+    color: orange;
 }
